--- a/pom.xml
+++ b/pom.xml
@@ -42,11 +42,11 @@
 			<scope>compile</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
-<!-- <dependency> -->
-<!--     <groupId>org.apache.maven.plugins</groupId> -->
-<!--     <artifactId>maven-compiler-plugin</artifactId> -->
-<!--     <version>3.8.1</version> -->
-<!-- </dependency> -->
+<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.8.1</version>
+</dependency>
 		
 		<dependency>
 			<groupId>log4j</groupId>
