--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,13 @@
 			<version>6.14.3</version>
 			<scope>compile</scope>
 		</dependency>
+<!-- <dependency> -->
+<!--   <groupId>org.testng</groupId> -->
+<!--   <artifactId>testng</artifactId> -->
+<!--   <version>6.8</version> -->
+<!--   <scope>test</scope> -->
+<!-- </dependency> -->
+
 		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
 <dependency>
     <groupId>org.apache.maven.plugins</groupId>
